name:                netpoll
version:             0.1.0.0
synopsis:            Polls network devices for stats, typically on throughput and related performance metrics.
-- description:
homepage:            http://github.com
license:             GPL-3
license-file:        LICENSE
author:              Alistair Bayley
maintainer:          alistair@abayley.org
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable netpoll
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                       , array
                       , attoparsec
                       , bytestring
                       , containers
                       , deepseq
                       , network
                       , process >=1.2 && <1.3
                       , split
                       , stm
                       , text
                       , transformers
                       , unordered-containers
                       , time
--                       , NetSNMP
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -static -threaded

test-suite testsuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src test
  default-language:    Haskell2010
-- main-is should result in flag "-main-is TestSuite"
-- being passed to ghc, but it does not, so we have
-- to do it manually here.
  main-is:             TestSuite.hs
  ghc-options:         -Wall -static -threaded -main-is TestSuite

  build-depends:       base >=4.7 && <4.8
                       , array
                       , attoparsec
                       , bytestring
                       , containers
                       , deepseq
                       , network
                       , process >=1.2 && <1.3
                       , split
                       , stm
                       , text
                       , transformers
                       , unordered-containers
--                       , QuickCheck
--                       , test-framework
--                       , test-framework-hunit
                       , HUnit
                       , time
