name:                netpoll
version:             0.1.0.0
synopsis:            Polls network devices for stats, typically on throughput and related performance metrics.
-- description:
homepage:            http://github.com
license:             GPL-3
license-file:        LICENSE
author:              Alistair Bayley
maintainer:          alistair@abayley.org
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable netpoll
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -static -threaded
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.7 && < 5
                       , array
                       , async
                       , attoparsec
                       , bytestring
                       , containers
                       , deepseq
                       , directory
                       , filepath
                       , network
                       , old-locale
                       , process >=1.2 && <1.3
                       , split
                       , stm
                       , text
                       , transformers
                       , unordered-containers
                       , time

test-suite testsuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src test
  default-language:    Haskell2010
-- main-is should result in flag "-main-is TestSuite"
-- being passed to ghc, but it does not, so we have
-- to do it manually here.
  main-is:             TestSuite.hs
  ghc-options:         -Wall -static -threaded -main-is TestSuite
  build-depends:       base >=4.7 && <5
                       , array
                       , async
                       , attoparsec
                       , bytestring
                       , containers
                       , deepseq
                       , directory
                       , filepath
                       , network
                       , old-locale
                       , process >=1.2 && <1.3
                       , split
                       , stm
                       , text
                       , transformers
                       , unordered-containers
                       , HUnit
                       , time
